* What is new in gsl-2.6:

** add gsl_vector_memcpy_scale()

** remove -u flag to gsl-histogram

** updated spmatrix module
   - added routines and data structures for all types (float,uint,char,...)
   - added gsl_spmatrix_scale_columns() and gsl_spmatrix_scale_rows()
   - more efficient reallocation of COO/triplet matrices (no longer rebuilds binary tree)
   - enhanced test suite

** add routines for banded Cholesky decomposition (gsl_linalg_cholesky_band_*)

** documented gsl_linalg_LQ routines and added gsl_linalg_LQ_lssolve()

* What was new in gsl-2.5:

** doc bug fix in binomial distribution figure (Damien Desfontaines)

** added Wishart distribution (Timothée Flutre)

** added new module for digital filtering (gsl_filter); current filters include:
     Gaussian filter
     median filter
     recursive median filter
     impulse detection filter

** added new module for moving window statistics (gsl_movstat)

** added statistics functions:
     gsl_stats_median()
     gsl_stats_select()
     gsl_stats_mad()
     gsl_stats_mad0()
     gsl_stats_Sn_from_sorted_data()
     gsl_stats_Qn_from_sorted_data()
     gsl_stats_gastwirth_from_sorted_data()
     gsl_stats_trmean_from_sorted_data()

** added Romberg integration (gsl_integration_romberg)

** bug fix in deprecated functions gsl_multifit_wlinear_svd and
   gsl_multifit_wlinear_usvd (reported by Vlad Koli)

** documentation corrected to state that gsl_sf_legendre functions do
   not include Condon-Shortley phase by default

** bug fix in exponential fitting example when using larger number
   of points (reported by Anna Russo)

** changed internal workspace inside gsl_spmatrix to a union to
   avoid casting (suggested by Manuel Schmitz)

** bug fixes in ode-initval2 for very rare solver crashing cases:
   #52230 in msadams (reported by Michael Kaufman) and
   #52336 in msbdf (reported by Andrew Benson). As a fix,
   the maximum scaling of controlled step length was decreased
   from 5.0 to 4.9.
