@@ -442,13 +442,6 @@ Exchanging Rows and Columns
 Matrix Operations
 =================
 
-.. function:: int gsl_spmatrix_add (gsl_spmatrix * c, const gsl_spmatrix * a, const gsl_spmatrix * b)
-
-   This function computes the sum :math:`c = a + b`. The three matrices must
-   have the same dimensions.
-
-   Input matrix formats supported: :ref:`CSC <sec_spmatrix-csc>`, :ref:`CSR <sec_spmatrix-csr>`
-
 .. function:: int gsl_spmatrix_scale (gsl_spmatrix * m, const double x)
 
    This function scales all elements of the matrix :data:`m` by the constant
@@ -479,6 +472,22 @@ Matrix Operations
    .. math:: A \rightarrow X A
 
    where :math:`X = \textrm{diag}(x)`.
+
+   Input matrix formats supported: :ref:`COO <sec_spmatrix-coo>`, :ref:`CSC <sec_spmatrix-csc>`, :ref:`CSR <sec_spmatrix-csr>`
+
+.. function:: int gsl_spmatrix_add (gsl_spmatrix * c, const gsl_spmatrix * a, const gsl_spmatrix * b)
+
+   This function computes the sum :math:`c = a + b`. The three matrices must
+   have the same dimensions.
+
+   Input matrix formats supported: :ref:`CSC <sec_spmatrix-csc>`, :ref:`CSR <sec_spmatrix-csr>`
+
+.. function:: int gsl_spmatrix_add_to_dense (gsl_matrix * a, const gsl_spmatrix * b)
+
+   This function adds the elements of the sparse matrix :data:`b` to the elements of
+   the dense matrix :data:`a`. The result :math:`a(i,j) \leftarrow a(i,j) + b(i,j)` is
+   stored in :data:`a` and :data:`b` remains unchanged. The two matrices must have
+   the same dimensions.
 
    Input matrix formats supported: :ref:`COO <sec_spmatrix-coo>`, :ref:`CSC <sec_spmatrix-csc>`, :ref:`CSR <sec_spmatrix-csr>`
 
